# rust-aws-ses-sender

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.ko.md  README.md  deploy.sh  init_database.sh
src/: app.rs  config.rs  main.rs  state.rs
src/handlers/: event_handlers.rs  message_handlers.rs  mod.rs  topic_handlers.rs
src/middlewares/: auth_middlewares.rs
src/models/: request.rs  result.rs
src/services/: mod.rs  receiver.rs  scheduler.rs  sender.rs
src/tests/: event_tests.rs  mod.rs
