[package]
name = "rust-aws-ses-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
once_cell = "1.20.3"
jsonwebtoken = "9.3.1"
aws-config = "1.5.16"
aws-sdk-sesv2 = "1.65.0"
chrono = "0.4.39"
futures = "0.3.31"
serde_json = "1.0.138"
regex = "1.11.1"
sentry = "0.36.0"
tower = "0.5.2"
